# kvapp

./: LICENSE  README.md  kv_store.dir  setup.cfg
kvapp_pkg/: KVServer.py  kv_store.dir  main.py  requirements.txt  tmp_store.dir
kvapp_pkg/server/: KVServer.py
tests/: test_api.py  test_flask.py  test_kvstore.py
