[metadata]
name = kvapp-pkg-szekersz
version = 0.0.1
author = Szabolcs Szekér
author_email = szekersz@gmail.com
description = Key-value server application
long_description = file: README.md
long_description_content_type = text/markdown
# url = empty
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6